waitingList as a queue